--- a/src/MeuPonto.Web/Pages/Contratos/Empregadores/Criar.cshtml
+++ b/src/MeuPonto.Web/Pages/Contratos/Empregadores/Criar.cshtml
@@ -33,10 +33,10 @@
 
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 <div class="row mb-3">
-    <label asp-for="Empregador.Nome" class="col-sm-3 col-form-label"></label>
+    <label asp-for="CadastroEmpregador.Nome" class="col-sm-3 col-form-label"></label>
     <div class="col-sm-9">
-        <input asp-for="Empregador.Nome" class="form-control" />
-        <span asp-validation-for="Empregador.Nome" class="text-danger"></span>
+        <input asp-for="CadastroEmpregador.Nome" class="form-control" />
+        <span asp-validation-for="CadastroEmpregador.Nome" class="text-danger"></span>
     </div>
 </div>
 
