task: atualiza especificações

--- a/src/MeuPonto.Web/Pages/Pontos/Index.cshtml
+++ b/src/MeuPonto.Web/Pages/Pontos/Index.cshtml
@@ -22,7 +22,7 @@
 {
     <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group me-2" role="group" aria-label="First group">
-            <a class="btn btn-primary" asp-page="./Criar" target="_modal">
+            <a class="btn btn-primary Criacao Ponto" asp-page="./Criar" target="_modal">
                 <i class="bi bi-plus-circle"></i>
                 Criar Novo
             </a>
